# pattern-seek

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: greetings.yml  test-pr.yml
change-log/: v0.1.0.md
development/: architecture.mmd  plan.md
planning/: plan.md
src/pattern_seek/: cli.py  core.py  output.py  patterns.py  regex_patterns.py
src/pattern_seek/transform/: __init__.py  common.py  csv_transform.py  output.py
tests/: test_core.py  test_output.py  test_patterns.py
tests/transform/: test_common.py  test_csv_transform.py  test_integration.py  test_output.py
